loopdowhile.Poucet2.scala.code
var baggle:Int=0
while(!exitReached()){
  do{
    forward();
  }
  while(!crossing())
  if(isOverBaggle()){
    baggle=baggle+1
  }
}
if(crossing())&&(baggle<=2){
  right();
}
if(crossing())&&(baggle>=3){
  left();
}
forward();